# TON-Solana-demo

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  deploy.sh  package-lock.json  package.json  vercel.json
.github/workflows/: deploy.yml
backend/: .env.example  package.json  tsconfig.json
backend/src/: index.ts
backend/src/controllers/: accountController.ts  operationController.ts
backend/src/services/: jupiterService.ts  redisService.ts  solanaService.ts
backend/src/types/: index.ts
frontend/: next.config.ts  package.json  tailwind.config.js  tsconfig.json
frontend-simple/: package.json
frontend-simple/src/app/: globals.css  layout.tsx  page.tsx
frontend/public/: tonconnect-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/swap/: page.tsx
frontend/src/components/: AccountInfo.tsx  BalanceCard.tsx  DepositModal.tsx  Header.tsx  QuickActions.tsx  RecentTransactions.tsx  TonConnectButton.tsx
frontend/src/components/providers/: QueryProvider.tsx  SolanaProvider.tsx
frontend/src/store/: walletStore.ts
programs/ton-smart-wallet/: Anchor.toml  Cargo.toml
programs/ton-smart-wallet/src/: lib.rs
public/: tonconnect-manifest.json
src/app/: layout.tsx  page.tsx
src/components/: TonConnectProvider.tsx
