[package]
name = "ton-smart-wallet"
version = "0.1.0"
description = "Cross-chain smart wallet program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ton_smart_wallet"

[[bin]]
name = "ton-smart-wallet"
path = "src/bin/main.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
bytemuck = "1.14.0"
solana-program = "1.18.0"
spl-token = "4.0.0"